# stretch_web_interface

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Tutorial_LICENSE.md  WEBRTC_PROJECT_LICENSE.md  WebRTC_Project_LICENSE.md  app.js  app.ts  coturn.service  index.html  mkdocs.yml  nodemon.json  package-lock.json  package.json  package.xml  signaling_sockets.js  snowpack.config.js  start_operator_browser.js  start_robot_browser.js  tsconfig.json  vite.config.js  webpack.config.js
bash_scripts/: make_summary_videos.sh  start_desktop_dev_env.sh  start_server_production_env.sh  start_web_server_and_robot_browser.sh  stop_desktop_dev_env.sh  stop_server_production_env.sh  web_interface_installation.sh  web_server_installation.sh
certificates/: forky.hcrlab.cs.washington.edu+6-key.pem  forky.hcrlab.cs.washington.edu+6.pem  homemade_certificate.crt  homemade_privkey.pem  rootCA.pem
controllers/: AuthController.js  AuthController.ts
launch/: gripper_camera.launch  navigation_camera.launch  web_interface.launch  web_interface_simulation.launch
models/: User.js
operator/: operator.css  operator.html  operator.js  operator_pose.js  operator_recorder.js  operator_ui_regions.js
robot/: robot.css  robot.html  robot.js  robot_acquire_av.js  ros_connect.js
routes/: index.js
shared/: base.cmp.js  base.cmp.ts  commands.js  data.html  data.js  database.js  request_response.js  send_recv_av.js  sensors.js  video_dimensions.js  webrtc_utils.js  webrtcconnection.js  webrtcconnection.ts
src/: index.html  style.css
ui_elements/: operator_ui_test.html
views/: index.pug  (+3 more)
(+103 files in other folders)
