<?xml version="1.0"?>
<package format="2">
  <name>stretch_web_interface</name>
  <version>0.0.1</version>
  <description>The stretch_web_interface package</description>

  <maintainer email="mcakmak@cs.washington.edu">Maya Cakmak</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbridge_server</depend>
  <depend>tf2_web_republisher</depend>
  <depend>usb_cam</depend>

  <export>
  </export>
</package>
